packages/sycamore-macro/tests/component/inline-props-fail.stderr
error: expected `inline_props`
  --> tests/component/inline-props-fail.rs:10:13
   |
10 | #[component(not_inline_props)]
   |             ^^^^^^^^^^^^^^^^

error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in field types
 --> tests/component/inline-props-fail.rs:4:34
  |
4 | fn ImplTraitInArgs<G: Html>(foo: impl std::fmt::Display) -> View<G> {
  |                                  ^^^^^^^^^^^^^^^^^^^^^^

error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in impl headers
 --> tests/component/inline-props-fail.rs:4:34
  |
4 | fn ImplTraitInArgs<G: Html>(foo: impl std::fmt::Display) -> View<G> {
  |                                  ^^^^^^^^^^^^^^^^^^^^^^
